@@ -358,11 +358,30 @@ ccm_freeze_paint(CCMWindowPlugin* plugin, CCMWindow* window,
 	
 	if (ccm_window_is_viewable (window) && !self->priv->alive)
 	{
+		const CCMRegion* geometry = ccm_drawable_get_geometry(CCM_DRAWABLE(window));
+		const cairo_rectangle_t* area = ccm_window_get_area(window);
+		CCMRegion* tmp = ccm_region_copy((CCMRegion*)geometry);
+		int x, y, cpt, nb_rects;
+		cairo_rectangle_t* rects;
+		
+		ccm_window_plugin_get_origin(plugin, window, &x, &y);
+		ccm_region_offset(tmp, x - area->x, y - area->y);
+		ccm_region_resize(tmp, area->width, area->height);
+		cairo_save(context);
+		
+		ccm_region_get_rectangles(tmp, &rects, &nb_rects);
+		for (cpt = 0; cpt < nb_rects; cpt++)
+			cairo_rectangle(context, rects[cpt].x, rects[cpt].y, 
+							rects[cpt].width, rects[cpt].height);
+		cairo_clip(context);
+		g_free(rects);
+		ccm_region_destroy(tmp);
 		if (!self->priv->color)
 			cairo_set_source_rgb(context, 0, 0, 0);
 		else
 			gdk_cairo_set_source_color(context, self->priv->color);
 		cairo_paint_with_alpha(context, self->priv->opacity);
+		cairo_restore(context);
 	}
 	
 	return ret;
